# speech2text_experiments

./: deepgram.py  dialogue_show_yt_H0ObP_tf4FA.md  monkeys_humans.md  monkeys_humans_transcripts_gemini_prompt2.md  pyproject.toml  stateless_transcripts_gemini.md  transcript.md  transcript1.txt  transcript_clean.md
